[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Solid/Pipe/Pipe.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/Pipe/pipe.png" type="Texture" id=2]
[ext_resource path="res://Objects/Enemies/Piranha/Piranha.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Audio/Pipe/pipe_enter.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Graphics/Sprites/Pipe/enter.png" type="Texture" id=5]
[ext_resource path="res://Objects/Particles/DestParticles/DestParticles.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 32 )

[node name="Pipe" type="StaticBody2D"]
z_index = -28
z_as_relative = false
collision_layer = 31
collision_mask = 31
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Piranha" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -32 )
start = 1

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 0, -10 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -58 )

[node name="TeleportTimer" type="Timer" parent="."]
one_shot = true

[node name="SFXPipeEntered" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="DestParticles" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -32 )
z_index = 10
lifetime = 0.5

[node name="enter" type="Sprite" parent="."]
position = Vector2( 0, -86 )
z_index = 50
texture = ExtResource( 5 )
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
